[package]
name = "npm-rs"
version = "0.1.0"
authors = ["peacememories"]
edition = "2018"
keywords = ["build-dependencies"]
license = "MIT/Apache-2.0"
repository = "https://github.com/peacememories/npm-rs"
homepage = "https://github.com/peacememories/npm-rs"
categories = ["development-tools::build-utils"]
description = """
A build-time dependency for Cargo build scripts to assist in invoking npm scripts.
"""

[lib]
name = "npm_rs"
path = "src/lib.rs"

[dependencies]
which = "3.1.0"
fs_extra = "1.1.0"